# opencv_camera

./: README.md  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native_opencv.cpp
android/src/main/cpp/general/: general_funtion.cpp  general_funtion.h
example/: pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.m
example/lib/: app_button.dart  main.dart  utils.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  (+1 more)
ios/: .gitignore  opencv_camera.podspec
ios/Classes/: OpenCVCameraView.h  OpenCVCameraView.mm  OpenCVCameraViewFactory.h  OpenCVCameraViewFactory.m  OpencvCameraPlugin.h  OpencvCameraPlugin.m  VeinFilterWrapper.hpp  VeinFilterWrapper.mm
lib/: opencv_camera.dart  opencv_camera_view.dart
linux/: CMakeLists.txt  opencv_camera_plugin.cc  opencv_camera_plugin_private.h
linux/test/: opencv_camera_plugin_test.cc
macos/: opencv_camera.podspec
macos/Classes/: OpencvCameraPlugin.swift
test/: opencv_camera_method_channel_test.dart  opencv_camera_test.dart
windows/: CMakeLists.txt  opencv_camera_plugin.cpp  opencv_camera_plugin.h  opencv_camera_plugin_c_api.cpp
windows/test/: opencv_camera_plugin_test.cpp
(+17 files in other folders)
